GNOME Bugzilla – Bug 689611
"Enabled" isn't a good label for the global switch
Last modified: 2013-02-18 15:42:23 UTC
The switch already says on and off. "Enabled" is just repetition. Alternatives could be "System Search" or "Activities Overview Search".
I think I like "System Search" better, but still it doesn't feel completely right. For the way the dialog is currently structured, what we're disabling with the toggle is application-provided search - you would still be able to search for applications - but I can't come up with a better wording at the moment.
What about "Content Search"? Everything that is not an application can be considered "content", right? Nothing but a suggestion.
If we use the GNOME 3 toolbar/titlebar style with "Search" on the same row as the switch we can remove the label.
(In reply to comment #3) > If we use the GNOME 3 toolbar/titlebar style with "Search" on the same row as > the switch we can remove the label. I agree that this would be a better solution.
Created attachment 236484 [details] [review] search: don't use a label for the enabled switch
Review of attachment 236484 [details] [review]: Add a reference to the previous commit, or some details. The commit message is lacking on the "why".