search: Don't use a label for the enabled switch

https://bugzilla.gnome.org/show_bug.cgi?id=689611